@@ -1,3 +1,10 @@
+2024-13-08: Hugo Melder <hugo@algoriddim.com>
+
+	* Source/NSOperation.m:
+	* Headers/Foundation/NSOperation.h:
+	Give NSOperationQueue worker threads a proper thread
+	name for easy identification.
+
 2024-12-08 Hugo Melder <hugo@algoriddim.com>
 	* Source/NSThread.m:
 	Fix threadPriority and setThreadPriority: on Android.
